fix logs